# Python-task

./: .dockerignore  .gitignore  README.md  alembic.ini  locust.py  main.py  profile_test.py  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0001_add_assignee_email.py  3663703a0183_create_tickets_table.py
app/: main.py
app/api/: __init__.py  ai.py  ticket_routes.py
app/core/: __init__.py  config.py  database.py  deps.py  exceptions.py
app/models/: __init__.py  ticket.py
app/repositories/: ticket_repositories.py
app/schemas/: __init__.py  ticket_schema.py
app/services/: __init__.py  bedrock_service.py  ticket_service.py
tests/: test_ticket_create.py  test_ticket_delete.py  test_ticket_get.py  test_ticket_post.py  test_ticket_update.py
