[project]
name = "ai-service-desk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "boto3>=1.43.54",
    "dotenv>=0.9.9",
    "fastapi>=0.139.2",
    "httpx2>=2.7.0",
    "locust>=2.46.1",
    "pydantic-settings>=2.14.2",
    "pyinstrument>=5.1.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
